# mancala

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: alphabeta.rs  alphabeta_bout.rs  battle.rs  first_bout.rs  minmax.rs  minmax_bout.rs  node_count.rs  random_bout.rs
src/: lib.rs
src/bout/: mod.rs
src/game/: mod.rs
src/strategy/: heuristic.rs  mod.rs
src/strategy/naive/: first.rs  mod.rs  random.rs
src/strategy/tree/: alphabeta.rs  ids.rs  mcts.rs  minmax.rs  mod.rs
src/strategy/user/: mod.rs
tests/: execution_time_alphabeta.rs
